fix: Fix z-indexes

--- a/client/src/components/CardModal/Attachments/Item.module.scss
+++ b/client/src/components/CardModal/Attachments/Item.module.scss
@@ -29,7 +29,6 @@
     padding: 6px 32px 6px 128px;
     margin: 0;
     min-height: 80px;
-    z-index: 0;
   }
 
   .extension {
@@ -95,7 +94,6 @@
     text-decoration: none;
     top: 50%;
     width: 112px;
-    z-index: 1;
   }
 
   .thumbnailLabel {
